--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="rachellgarrido.com">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="Programador, programador web, portafolio de programador, página de programador">
-    <link rel="icon" href="icons/favicon.png">
+    <link rel="icon" href="img/iconrg.png">
     <title>Rachell Garrido</title>
     <script src="js/modernizr-custom.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
