Responsive móvil header con flechas de navegación

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <ul class="menuList">
                     <li class="listItem"><a class="linkItem i01" href="#Inicio">Inicio</a></li>
                     <li class="listItem"><a class="linkItem i02" href="#Sobre-mí">Sobre mí</a></li>
-                    <li class="listItem"><a class="linkItem i03" href="#¿Qué-hago-ahora?">¿Qué hago ahora?</a></li>
+                    <li class="listItem"><a class="linkItem i03" href="#Qué-hago-ahora">¿Qué hago ahora?</a></li>
                     <li class="listItem"><a class="linkItem i04" href="#">Contacto</a></li>
                 </ul>
             </div>
