--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     <li class="listItem"><a class="linkItem i01" onclick="displayPageMenu('home')" href="#inicio">Inicio</a></li>
                     <li class="listItem"><a class="linkItem i02" onclick="displayPageMenu('aboutMe')" href="#sobre-mi">Sobre mí</a></li>
                     <li class="listItem"><a class="linkItem i03" onclick="displayPageMenu('whatImDoingNow')" href="#que-hago-ahora">¿Qué hago ahora?</a></li>
-                    <li class="listItem"><a class="linkItem i04" onclick="displayPageMenu('contact')" href="#contacto">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -57,13 +56,27 @@
     </header>
 
     <div id="page_sections" class="page_sections">
-        <section class="page home" id="home" style="display:block"></section>
-        <section class="page about" id="aboutMe" style="display:none"></section></section>
-        <section class="page what" id="whatImDoingNow" style="display:none"></section></section>
-        <section class="page contact" id="contact" style="display:none"></section></section>
+        <section class="page home" id="home" style="display:block">
+        </section>
+        <section class="page about" id="aboutMe" style="display:none">
+        </section></section>
+        <section class="page what" id="whatImDoingNow" style="display:none">
+        </section></section>
     </div>
-    <div class="ejemplo"></div>
     
+    <footer class="footer">
+        <div class="footer-rrss">
+            <a href="mailto:rachell.garrido.dev@gmail.com" class="rrss rs01" target="_blank">rachell.garrido.dev@gmail.com</a>
+            <a href="https://github.com/RachellGarrido" class="rrss rs02" target="_blank"></a>
+        </div>
+        <p class="footerText">Rachell Garrido © 2019</p>
+    </footer>
+    
+
+
+
+
+
     <script src="js/display.js"></script>
 </body>
 </html>
