Versión 1.1 Detalles de meta arreglados

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="owner" content="Rachell Garrido">
     <meta name="author" content="rachellgarrido.com">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="Programador, programador web, portafolio de programador, página de programador">
+    <meta name="description" content="¡Bienvenido a mi web personal! Soy Rachell Garrido una programadora amante de la informatica que se esfuerza por llegar al conocimiento de un desarrollador full Stack">
+    <meta name="keywords" content="Programador, programador web, portafolio de programador, página de programador, programadores">
     <link rel="icon" href="img/iconrg.png">
     <title>Rachell Garrido</title>
     <script src="js/modernizr-custom.js"></script>
