--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             </div>
         </nav>
             <div id="prev_page" class="prev_page" onclick="displayPageButton('prev')">
-                <img src="/icons/iconarrow.png" alt="Flecha de navegación anterior" class="prev_arrow">
+                <img src="/icons/arrow.png" alt="Flecha de navegación anterior" class="prev_arrow">
             </div>
             <div id="next_page" class="next_page" onclick="displayPageButton('next')">
-                <img src="/icons/iconarrow.png" alt="Flecha de navegación siguiente" class="next_arrow">
+                <img src="icons/arrow.png" alt="Flecha de navegación siguiente" class="next_arrow">
             </div>
     </header>
 
