Versión 1.2 prueba de íconos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
             <div id="prev_page" class="prev_page" onclick="displayPageButton('prev')">
-                <img src="/icons/arrow.png" alt="Flecha de navegación anterior" class="prev_arrow">
+                <img src="icons/arrow.png" alt="Flecha de navegación anterior" class="prev_arrow">
             </div>
             <div id="next_page" class="next_page" onclick="displayPageButton('next')">
                 <img src="icons/arrow.png" alt="Flecha de navegación siguiente" class="next_arrow">
